--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -295,7 +295,7 @@ nav.abajo .main-name:hover {
 /* *********** Seccion PELUQUERIA *********** */
 .container3 {
     width: 100vw;
-    background-color: #b0c4b1;
+    background-color: #e0f5e1;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -338,7 +338,7 @@ nav.abajo .main-name:hover {
 /* *********** Seccion UBINET SA *********** */
 .container4 {
     width: 100vw;
-    background-color: #caf0f8;
+    background-color: #d8f3f8;
     padding-top: 120px;
     padding-bottom: 100px;
 }
