--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -295,7 +295,7 @@ nav.abajo .main-name:hover {
 /* *********** Seccion PELUQUERIA *********** */
 .container3 {
     width: 100vw;
-    background-color: #e0f5e1;
+    background-color: #d7f5d8;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -381,7 +381,7 @@ nav.abajo .main-name:hover {
 /* *********** Seccion CUEBANITA *********** */
 .container5 {
     width: 100vw;
-    background-color: #b8c0ff;
+    background-color: #ccd1f8;
     padding-top: 120px;
     padding-bottom: 100px;
 }
