--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -202,16 +202,14 @@ nav.abajo .main-name:hover {
 .contenedor h2 {
     display: flex;
     justify-content: center;
-
     padding-bottom: 30px;
     /* font-size: 2em; */
-
-    font-size: clamp(20px, 1vw + 1rem, 30px);
+    font-size: clamp(20px, 1vw + 1rem, 32px);
 }
 
 .container1 {
     width: 100vw;
-    background-color: #f7e1d7;
+    background-color: #ffdde1;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -468,37 +466,17 @@ p.contac {
     color: #ffffff;
 }
 
-
-/* .social-links {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-  
-.social-links li {
-    color: #ffffff;
-    padding: 8px 10px;
-}
-
-.social-links a {
-    font-size: 1.4rem;
-    color: #ffffff;
-    text-decoration: none;
-    transition: color 0.3s;
-}
-  
-.social-links a:hover {
-    color: #2fcdcd;
-    background-color: #333;
-} */
-
 .sociales {
     padding-bottom: 10px;
 }
 
 .sociales a {
     padding: 0 4px;
+}
+
+.linkedin, .github, .facebook, .whatsapp {
+    width: 36px;
+    height: 36px;
 }
 
 p.copying {
