--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,7 @@ section h2 {   /* todos los h2 */
 }
 
 .container-certificad {
-    height: 40vh;
+    height: 60vh;
     width: 45%;
     margin: 40px auto 40px;
 
@@ -322,7 +322,7 @@ section h2 {   /* todos los h2 */
     /* background-color: #e0ccf3; */
     background-color: #e9dcf5;
     width: 100%;
-    max-height: 300px;
+    max-height: 350px;
     overflow: hidden;
 
     transition: 0.5s;
@@ -388,7 +388,7 @@ section h2 {   /* todos los h2 */
     padding: 0 16px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 
     /* border: 2px solid red; */
 }
@@ -397,6 +397,7 @@ section h2 {   /* todos los h2 */
     border: 1px solid lightslategrey;
     border-radius: 10px;
     padding: 6px 16px;
+    margin-bottom: 10px;
     /* font-size: 18px; */
     font-size: (0.625rem, 4vw - 1rem, 1.125rem);
     color: #ffffff;
@@ -680,6 +681,17 @@ footer .copyright {
 }
 
 
+
+/*************************************/
+/* ***** Media Query con 1368px ***** */
+@media (max-width: 1368px) {
+    .btn-certificad a {
+        padding: 4px 16px;
+        font-size: 10px;
+    }
+}
+
+
 /*************************************/
 /* ***** Media Query con 952px ***** */
 @media (max-width: 952px) {
@@ -857,5 +869,19 @@ footer .copyright {
     footer .copyright {
         font-size: 0.74rem;
         font-stretch: normal;
+    }
+}
+
+@media (max-width: 430px) {
+    .container-certificad {
+        height: 80vh;
+        width: 60%;
+        gap: 1.5rem;
+    }
+
+    .btn-certificad a {
+        padding: 2px 16px;
+        margin-bottom: 6px;
+        font-size: 10px;
     }
 }
