--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -5,7 +5,7 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
-    box-sizing: border-box;  /* para que los elementos no salgan del contenedor */
+    box-sizing: border-box;
 }
 
 nav {
@@ -28,7 +28,7 @@ nav.abajo {
 
 .enlace {
     position: absolute;
-    padding: 6px 50px 20px;
+    padding: 6px 16px 20px;
     display: flex;
     align-items: center;
 }
@@ -37,6 +37,7 @@ nav.abajo {
     height: 60px;
     border-radius: 4px;
     margin-right: 20px;
+
     transition: 1s;
 }
 
@@ -46,6 +47,7 @@ nav.abajo {
     font-size: 18px;
     text-transform: uppercase;
     font-size: 1.6rem;
+
     transition: 0.5s;
 } 
 
@@ -119,7 +121,7 @@ nav.abajo ul li a:hover {
 }
 
 img.logo:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     rotate: 360deg;
 }
 
@@ -140,7 +142,7 @@ nav.abajo .main-name:hover {
     height: calc(100vh - 100px);
 
     /* nuevo */
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -218,7 +220,7 @@ nav.abajo .main-name:hover {
 }
 
 .container1 {
-    width: 100vw;
+    width: 100%;
     background-color: #ffdde1;
     padding-top: 120px;
     padding-bottom: 100px;
@@ -260,7 +262,7 @@ nav.abajo .main-name:hover {
 /**********************************************/
 /* *********** Seccion PASTELERIA *********** */
 .container2 {
-    width: 100vw;
+    width: 100%;
     background-color: #dedbd2;
     padding-top: 120px;
     padding-bottom: 100px;
@@ -302,7 +304,7 @@ nav.abajo .main-name:hover {
 /**********************************************/
 /* *********** Seccion PELUQUERIA *********** */
 .container3 {
-    width: 100vw;
+    width: 100%;
     background-color: #d7f5d8;
     padding-top: 120px;
     padding-bottom: 100px;
@@ -345,7 +347,7 @@ nav.abajo .main-name:hover {
 /**********************************************/
 /* *********** Seccion UBINET SA *********** */
 .container4 {
-    width: 100vw;
+    width: 100%;
     background-color: #d8f3f8;
     padding-top: 120px;
     padding-bottom: 100px;
@@ -388,7 +390,7 @@ nav.abajo .main-name:hover {
 /**********************************************/
 /* *********** Seccion CUEBANITA *********** */
 .container5 {
-    width: 100vw;
+    width: 100%;
     background-color: #ccd1f8;
     padding-top: 120px;
     padding-bottom: 100px;
