--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,7 @@ nav.abajo .main-name:hover {
     flex-direction: column;
     max-width: 70%;
     margin: 0 auto;
+    text-align: justify;
 }
   
 .sobremi-content img {
@@ -525,17 +526,19 @@ section h2 {   /* todos los h2 */
 .card-description {
     grid-row: 3 / 4; /* Descripción ocupa la tercera fila */
     margin: 0 16px;
+    padding-right: 6px;
     display: flex;
     align-items: flex-start;
     overflow-y: scroll; /* Hacer que el contenido desbordado sea desplazable verticalmente */
     max-height: 100%; /* Asegurar que no crezca más allá del contenedor */
+    text-align: justify;
 }
 
 .card-description p {
     color: #666;
-    font-size: 19px;
+    font-size: 22px;
     padding: 10px 0;
-    line-height: 1.1;
+    line-height: 1.2;
 }
 
 .card-btns {
