--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -36,7 +36,7 @@ nav.abajo {
 .logo {
     height: 60px;
     width: 60px;
-    border-radius: 4px;
+    border-radius: 10px;
     margin-right: 20px;
 
     animation: rotate-logo 4s ease-in-out infinite;
@@ -108,7 +108,7 @@ li a:hover:after {
     color: white;
     float: right;
     line-height: 80px;
-    margin-right: 30px;
+    margin-right: 20px;
     cursor: pointer;
     display: none;
 }
@@ -126,11 +126,6 @@ nav.abajo .logo,
 nav.abajo ul li a:hover {
     color: #21d5fa;
 }
-
-/* img.logo:hover {
-    transform: scale(1.1);
-    rotate: 360deg;
-} */
 
 nav.abajo .main-name {
     color: #ffffff;
@@ -183,7 +178,6 @@ nav.abajo .main-name:hover {
         transform: translateX(-220%);
     }
 }
-
 
 .ol-proyectos .li-proyectos {
     /* display: flex; */
@@ -435,29 +429,6 @@ nav.abajo .main-name:hover {
     width: 100%;
 }
 
-/* 
-img {
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
-}
-
-.gallery__container {
-    width: 90%;
-    max-width: 1100px;
-    margin: 40px auto;
-
-    grid-template-columns:
-        repeat(auto-fit, minmax(280px, 1fr));
-    gap: 2.2em;
-}
-
-
-.gallery__container img {
-    height: 100%;
-} */
-
-
 
 /*************************/
 /* ******* Footer ****** */
@@ -509,12 +480,17 @@ footer .copyright {
 /* ***** Media Query con 952px ***** */
 @media (max-width: 952px) {
     .enlace {
-        padding-left: 16px;
-        order: 1;
+        padding: 14px 16px;
+        /* order: 1; */
     }
 
-    .nombre {
-        font-size: 18px;
+    .logo {
+        height: 40px;
+        width: 40px;
+    }
+
+    .main-name {
+        font-size: 1.4rem;
     }
     
     nav ul li a {
@@ -565,7 +541,7 @@ footer .copyright {
     .presentacion h1 {
         font-size: 4rem;
         
-        animation: slide-in 20s infinite;
+        animation: slide-in 18s infinite;
         animation-timing-function: linear;
     }
     
@@ -595,7 +571,7 @@ footer .copyright {
     .presentacion h1 {
         font-size: 3rem;
         /* fotograma */
-        animation: slide-in 18s infinite;
+        animation: slide-in 16s infinite;
         animation-timing-function: linear;
     }
     
