--- a/css/styles.css
+++ b/css/styles.css
@@ -356,7 +356,7 @@ section h2 {   /* todos los h2 */
 
 .title-certificad h3 {
     /* font-size: 28px; */
-    font-size: clamp(1.125rem, 1vw + 0.75rem, 1.75rem);;
+    font-size: clamp(1.125rem, 1vw + 0.75rem, 1.6rem);
     margin: 0;
 }
 
@@ -380,7 +380,6 @@ section h2 {   /* todos los h2 */
     padding: 10px 16px;
     display: flex;
     justify-content: center;
-    text-align: justify;
     /* align-items: center; */
     
     /* border: 2px solid red; */
@@ -388,8 +387,9 @@ section h2 {   /* todos los h2 */
 
 .text-certificad p {
     /* font-size: 22px; */
-    font-size: clamp(0.75rem, 1vw + 0.5rem, 1.375rem);;
+    font-size: clamp(0.75rem, 1vw + 0.5rem, 1.3rem);;
     margin: 0;
+    text-align: justify;
 }
 
 .btn-certificad {
@@ -437,8 +437,9 @@ section h2 {   /* todos los h2 */
     margin-bottom: 30px;
 }
 
-.container-download h3 {
-    font-size: 2em;
+.container-download h2 {
+    /* font-size: 2em; */   /* los h2 ya tiene el tamaño, aqui le cambiamos el color */
+
     margin-bottom: 60px;
     color: #aa9872;
 }
@@ -989,8 +990,8 @@ footer .copyright {
 /*************************************/
 @media (max-width: 430px) {
     .container-certificad {
-        height: 80vh;
-        width: 60%;
+        height: 86vh;
+        width: 66%;
         gap: 1.5rem;
     }
 
