--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -8,27 +8,34 @@
     box-sizing: border-box;
 }
 
+/* html {
+    scroll-behavior: smooth;
+} */
+
 nav {
     position: fixed;
     top: 0;
     left: 0;
     justify-content: space-arround;
     transition: 0.7s;
-    padding: 16px 10px;
-    height: 100px;
-    /* width: 100%; */
-    width: 100vw;
+    /* padding: 16px 10px; */
+    height: 90px;
+    width: 100%;
+    /* width: 100vw; */
     z-index: 100;
 }
 
 nav.abajo {
-    background: rgba(38, 24, 51, 0.6);
-    padding: 12px 20px;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 4px 10px;
 }
 
 .enlace {
     position: absolute;
-    padding: 8px 16px 20px;
+    height: 70px;
+    padding: 6px;
+    margin: 8px 0 0 16px;
+  
     display: flex;
     align-items: center;
 }
@@ -39,19 +46,30 @@ nav.abajo {
     border-radius: 10px;
     margin-right: 20px;
 
-    animation: rotate-logo 4s ease-in-out infinite;
+    animation: rotate-logo 6s ease-in-out infinite;
 }
 
-@keyframes rotate-logo {
+/* @keyframes rotate-logo {
     from {
         transform: rotateY(360deg);
+    }
+} */
+
+@keyframes rotate-logo {
+    0% {
+        transform: rotateY(360deg);
+    }
+    60% {
+        transform: rotateY(0deg);
+    }
+    100% {
+        transform: rotateY(0deg);
     }
 }
 
 .main-name {
-    color: #21d5fa;
+    color:#21d5fa;
     font-weight: bold; /* negrita */
-    font-size: 18px;
     text-transform: uppercase;
     font-size: 1.6rem;
 
@@ -65,19 +83,19 @@ nav.abajo {
 
 nav ul {
     float: right;
-    margin-right: 20px;
+    margin: 3px 20px 4px 4px;
 }
 
 nav ul li {
     display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+    line-height: 70px;
+    margin: 6px 5px;
 }
 
 nav ul li a {
     position: relative;
     color: #21d5fa;
-    font-size: 18px;
+    font-size: 1.125rem;
     border-radius: 5px;
     text-transform: uppercase;
     padding: 0 12px;
@@ -179,24 +197,23 @@ nav.abajo .main-name:hover {
     }
 }
 
-.ol-proyectos .li-proyectos {
-    /* display: flex; */
-    line-height: 50px;
-    margin: 0 5px;
+.opc-proyectos {
+    display: flex;
+    flex-direction: column;
 }
 
-.ol-proyectos .li-proyectos a {
-    /* position: relative; */   /* Les anule esto, para que NO ponga el subrayado rojo */
+.opc-proyectos a {
     color: #ffffff;
-    font-size: 2em;
-    border-radius: 5px;
+    font-size: 2rem;
     text-transform: uppercase;
-    padding: 0 12px;
+    padding: 5px 12px;
+    margin: 5px;
 }
 
-.ol-proyectos .li-proyectos a:hover {
+.opc-proyectos a:hover {
     color: #f177cd;
 }
+
 
 .flecha-arriba{
     bottom: 4px;
@@ -477,43 +494,44 @@ footer .copyright {
 
 
 /*************************************/
-/* ***** Media Query con 952px ***** */
-@media (max-width: 952px) {
-    .enlace {
-        padding: 14px 16px;
-        /* order: 1; */
-    }
-
-    .logo {
-        height: 40px;
-        width: 40px;
+/* ***** Media Query con 1090px ***** */
+@media (max-width: 1090px) {
+    nav ul li a {
+        font-size: 1rem;
+        padding: 0 8px;
     }
 
     .main-name {
         font-size: 1.4rem;
-    }
-    
-    nav ul li a {
-        font-size: 16px;
-    }
+    } 
 }
 
 
 /*************************************/
-/* ***** Media Query con 858px ***** */
-@media (max-width: 858px) {
+/* ***** Media Query con 952px ***** */
+@media (max-width: 952px) {
+    .logo {
+        height: 50px;
+        width: 50px;
+    }
+    
+    .main-name {
+        font-size: 1.3rem;
+    } 
+
     .checkbtn {
         display: block;
+        margin-top: 8px;
     }
 
-    ul {
+    nav ul {
         position: fixed;
         width: 100%;
-        /* height: 100vh; */
-        height: 68vh;
+        height: 76vh;
         background: rgba(44, 62, 80, 0.9);
-        top: 100px;
+        top: 90px;
         left: -100%;
+        margin: 0;
         text-align: center;
         transition: all .5s;
         overflow-y: auto;
@@ -521,8 +539,8 @@ footer .copyright {
 
     nav ul li {
         display: block;
-        margin: 50px 0;
-        line-height: 30px;
+        margin: 40px 0;
+        line-height: 50px;
     }
 
     nav ul li a {
@@ -537,7 +555,12 @@ footer .copyright {
     #check:checked ~ ul {
         left:0;
     }
+}
 
+
+/*************************************/
+/* ***** Media Query con 858px ***** */
+@media (max-width: 858px) {
     .presentacion h1 {
         font-size: 4rem;
         
@@ -619,4 +642,35 @@ footer .copyright {
         font-size: 0.74rem;
         font-stretch: normal;
     }
+}
+
+
+/*************************************/
+/* ***** Media Query con 430px ***** */
+/*************************************/
+@media (max-width: 430px) {
+    .logo {
+        height: 40px;
+        width: 40px;
+    }
+    
+    .container-certificad {
+        height: 86vh;
+        width: 66%;
+        gap: 1.5rem;
+    }
+
+    .btn-certificad a {
+        padding: 2px 16px;
+        margin-bottom: 6px;
+        font-size: 10px;
+    }
+
+    .button-download a img {
+        width: 120px;
+        height: 30px;
+        margin: 4px 15px;
+        transition: 0.5s;
+    }
+
 }
