--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -159,7 +159,7 @@ nav.abajo .main-name:hover {
     background: url(../img/3.jpg) no-repeat;   /* Es para que sea SOLO una imagen */
     background-size: cover;
     background-position: center center;
-    height: calc(100vh - 100px);
+    /* height: calc(100vh - 100px); */
 
     /* nuevo */
     width: 100%;
