--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,7 @@ section h2 {   /* todos los h2 */
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(450px, 100%), 1fr));
+    grid-auto-rows: 500px;
     gap: 2.2em;
 }
 
@@ -491,7 +492,7 @@ section h2 {   /* todos los h2 */
     box-shadow: 4px 4px 4px rgb(0, 0, 0, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    height: 600px;
+    /* height: 600px; */
     object-fit: cover;
     overflow: hidden;
 }
@@ -538,7 +539,7 @@ section h2 {   /* todos los h2 */
 
 .card-description p {
     color: #666;
-    font-size: 20px;
+    font-size: 18px;
     padding: 10px 0;
     line-height: 1.2;
 }
